# NewsMap

./: .gitignore  README.md  pom.xml
configs/newsConfigs/: aljazeera.json  ap.json  bbc.json  cnn.json  euronews.json
embeddings-service/: dim_reducer.py  main.py  requirements.txt
native/: CMakeLists.txt
native/include/: clustering.h  dbscan_grid.h  k_means.h
native/src/: dbscan_grid.c  kmeans.c
src/analysis/: ClusterInspector.java
src/crawler/: Crawler.java  CrawlerBuilder.java  CrawlerTester.java  CrawlerUtils.java  CrawlingMain.java  MainCrawling.java
src/global/: Constants.java
src/main/java/: module-info.java
src/main/java/newsmap/: App.java  Article.java  GlobeView.java  Hotspot.java  NewsPanel.java
src/main/java/newsmap/geo/: BorderMeshBuilder.java  BorderMeshFactory.java  CountryFinder.java  GeoJsonLoader.java
src/main/java/newsmap/gfx/: TextureFactory.java
src/main/java/newsmap/hotspot/: Hotspot.java  HotspotManager.java
src/main/newsmap/: App.java
src/main/newsmap/geo/: BorderMeshBuilder.java  BorderMeshFactory.java  CountryFinder.java  GeoJsonLoader.java
src/main/newsmap/gfx/: TextureFactory.java
src/main/newsmap/hotspot/: Hotspot.java  HotspotManager.java
src/main/newsmap/interaction/: GlobeControls.java
src/main/newsmap/model/: Article.java  HotspotCategory.java
src/main/newsmap/scene/: Globe3DFactory.java
src/main/newsmap/ui/: FilterBar.java  GlobePane.java  NewsPanel.java  OverlayPane.java
src/main/newsmap/util/: CoordinateUtils.java
src/storage/: Article.java  SiteConfig.java
(+10 files in other folders)
